packages/sish-client/sish-client.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sish-client
  namespace: traefik
  labels:
    app.kubernetes.io/name: "sish-client"
    app.kubernetes.io/component: edge
    app.kubernetes.io/part-of: autocloud
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: "sish-client"
      app.kubernetes.io/component: edge
      app.kubernetes.io/part-of: autocloud
  template:
    metadata:
      labels:
        app.kubernetes.io/name: "sish-client"
        app.kubernetes.io/component: edge
        app.kubernetes.io/part-of: autocloud
    spec:
      volumes:
        - name: ssh-credentials
          secret:
            secretName: sish-ssh-credentials
            defaultMode: 0600
      containers:
        - name: sish-client
          image: kroniak/ssh-client:3.15
          imagePullPolicy: IfNotPresent
          command:
            - /usr/bin/ssh
          args:
            - -R
            - "$(SISH_TUNNEL)"
            - "$(SISH_SERVER)"
            - sni-proxy=true
          resources:
            requests:
              cpu: 50m
              memory: 20Mi
            limits:
              cpu: 100m
              memory: 100Mi
          volumeMounts:
            - name: ssh-credentials
              mountPath: /root/.ssh
